tests/dataset/tpc-ds/compiler/rust/q66.error
rustc: exit status 1
warning: type `Web_sale` should have an upper camel case name
 --> /tmp/q66.rs:3:8
  |
3 | struct Web_sale {
  |        ^^^^^^^^ help: convert the identifier to upper camel case: `WebSale`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Catalog_sale` should have an upper camel case name
 --> /tmp/q66.rs:8:8
  |
8 | struct Catalog_sale {
  |        ^^^^^^^^^^^^ help: convert the identifier to upper camel case: `CatalogSale`

error[E0308]: mismatched types
  --> /tmp/q66.rs:25:23
   |
25 |     assert!(result == 66 as f64);
   |             ------    ^^^^^^^^^ expected `i32`, found `f64`
   |             |
   |             expected because this is `i32`

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0308`.
